k8s/ingress-vms-ingress-with-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.org/server-snippets":"location / {\n  return 302 /coffee;\n}\n"},"name":"vms-ingress-with-annotations","namespace":"default"},"spec":{"ingressClassName":"nginx-example","rules":[{"http":{"paths":[{"backend":{"service":{"name":"vms-envoy","port":{"number":10000}}},"path":"/gw","pathType":"Prefix"}]}}]}}
    nginx.org/server-snippets: |
      location / {
        return 302 /coffee;
      }
  creationTimestamp: "2022-09-16T01:53:22Z"
  generation: 1
  name: vms-ingress-with-annotations
  namespace: default
  resourceVersion: "33291"
  uid: 51dfb40d-ebd0-4c18-8c07-6371de3717ef
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vms-envoy
            port:
              number: 80
        path: /gw
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 20.79.199.42
